# campfire-on-rust

./: .dockerignore  .env.example  .gitignore  CAMPFIRE_ORIGINAL_VS_RUST_COMPARISON.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_IMPROVEMENTS_INSPIRED_BY_BASECAMP.md  Dockerfile  Dockerfile.railway  E2E_VALIDATION_FINAL_SUMMARY.md  E2E_VALIDATION_SUMMARY.md  END_TO_END_TESTING_IMPLEMENTATION_SUMMARY.md  END_TO_END_TESTING_SUMMARY.md  INSTALLATION_VERIFICATION_REPORT.md  PERFORMANCE_VALIDATION.md  PERFORMANCE_VALIDATION_SUMMARY.md  PROJECT.md  PROJECT_STATUS.md  RAILWAY_DEPLOYMENT_TESTING.md  README.md  README_UPDATED.md  README_root_backup.md  SECURITY.md  SESSION_CONTEXT.md  Slate-AllInOne-20250923212530.md  Slate-Initial-20250923192202.md  TASK_28_IMPLEMENTATION_SUMMARY.md  TASK_30_IMPLEMENTATION_SUMMARY.md  TASK_31_IMPLEMENTATION_SUMMARY.md  TASK_34_IMPLEMENTATION_SUMMARY.md  TASK_35_IMPLEMENTATION_SUMMARY.md  TASK_39_IMPLEMENTATION_SUMMARY.md  THANK_YOU_BASECAMP.md  campfire.db  daily-analysis-2025-01-27.md  docker-compose.yml  documentation-hierarchy-analysis.md  (+12 more)
.Slate/: .campfire_ts  Slate-AllInOne-20250923212530.md  Slate-Hotspots-20250923211438.md  Slate-Index-20250924002704.md  SlateCampfireDeconsruct20250924120426.md  SlateCampfireDeconstruct20250924120426.md  SlateLongerNotesCampfire20250924120426.md  SlatePrImpactGate20250924110719.md  SlateRoutes20250924110719.md  SlateSummary20250924110719.md  SlateUATAdditions20250924110719.md
.github/: SUPPORT.md  pull_request_template.md
.kiro/: unified-progress-tracker.sh
.parseltongue_workspace/: parseltongue
.scripts/: update-context.sh
_LLMcampfiretxt/: Campfire System User Journeys and Requirements.docx  Codebase Analysis for LLM Requirements.md  Implementation Brief_ Idiomatic Archive and Campfire Codebase System.docx  Rewriting Campfire Backend in Rust for Cost Efficiency.docx  SOP v2_ LLM-Guided Rewriting of the Campfire Codebase to Idiomatic Rust.docx  basecamp-once-campfire-8a5edab282632443.txt
_refRustIdioms/: Advanced React Patterns and Anti-Patterns (2025 Edition).docx
_refSystemDesign/: Next Steps for a One‑Shot Correct Campfire Rewrite (TDD-Driven Architecture).docx  RustReactSyyDesignRef20250913.md  WIPSummary20250916.md  trun_c30434831bfd40ab9e9c8048d73935ac.json
archive/: README.md
benches/: performance.rs  performance_benchmarks.rs  performance_validation.rs
docker/: Dockerfile  docker-compose.yml
docs/: CONTRIBUTING.md  README.md  analytics.md  api-overview.md  api-reference.md  architecture.md  authentication-guide.md  backup-restore-procedures.md  bot-integration.md  campfire-original-vs-rust-comparison.md  code-examples.md  deployment-guide.md  deployment-summary.md  deployment.md  development.md  docker-deployment-guide.md  error-recovery-guide.md  lch-color-system-implementation.md  migration-guide.md  monitoring-alerting-guide.md  performance-guide.md  performance-optimization-guide.md  scaling-guide.md  search-api.md  search-guide.md  security-guide.md  testing-guide.md  troubleshooting.md  websocket-api.md  websocket-guide.md  zero-friction-deployment.md
frontend/: package.json
monitoring/: prometheus.yml
parseltongue_workspace/: .slate_parseltongue_ts  latest  parseltongue_snapshot.json
release-artifacts/: INSTALLATION.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0.md  checksums.txt
scripts/: MVP.md  analytics-tracker.sh  backup-enhanced.sh  backup.sh  build-release-binaries.sh  campfire_diagnostics.sh  ci-check.sh  create-github-release.sh  db_health_check.sh  db_repair.sh  deploy-production.sh  deploy-railway.sh  deploy.sh  deployment-checklist.sh  install.sh  memory_monitor.sh  migrate.sh  monitoring-dashboard.sh  performance-monitor.sh  performance-optimization.sh  performance_profile.sh  pre-commit  prepare-github-release.sh  pt  restore-enhanced.sh  restore.sh  setup-dev.sh  setup-monitoring.sh  test-github-release.sh  test-install-script.sh  test-install-simulation.sh  test-railway-deployment.sh  test-release.sh  update-version.sh  validate-gtm-launch-readiness.sh  validate-gtm-phase2.sh  validate-mobile-experience.sh  validate-performance.sh  validate-release.sh  verify-release-setup.sh
src/: analytics.rs  assets.rs  config.rs  demo.rs  errors.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  rich_text.rs  shutdown.rs  sounds.rs  validation.rs
templates/: chat.html  demo.html  demo_enhanced.html  login.html  login_demo.html  setup.html
tests/: CRITICAL_GAP_TEST_SUMMARY.md  USER_JOURNEY_TEST_SUMMARY.md  asset_serving_test.rs  auth_flow_test.rs  auth_handlers_test.rs  bot_handlers_test.rs  bot_service_test.rs  cache_basic_test.rs  cache_integration_test.rs  comprehensive_e2e_validation.rs  critical_gap_tests.rs  cross_platform_testing_framework.rs  css_grid_layout_test.rs  css_validation_test.rs  database_writer_test.rs  demo_enhancement_test.rs  e2e_validation_final.rs  end_to_end_automated_testing.rs  end_to_end_installation_test.rs  end_to_end_integration_test.rs  end_to_end_test_summary.md  enhanced_demo_mode_test.rs  error_handling_test.rs  executable_specifications_integration_test.rs  executable_specifications_test.rs  gtm_launch_readiness_test.rs  gtm_validation_test.rs  health_check_test.rs  health_endpoints_test.rs  installation_timeframe_validation.rs  (+33 more)
(+199 files in other folders)
