[package]
name = "campfire-on-rust"
version = "0.1.0"
edition = "2021"
authors = ["Campfire Team"]
description = "Rust rewrite of Basecamp's Campfire chat application"
license = "MIT"

[dependencies]
# Web framework and async runtime
axum = { version = "0.6", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "cors", "trace"] }

# Database and migrations
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication and security
bcrypt = "0.13"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTML sanitization and rich text processing
ammonia = "3.0"
regex = "1.0"

# Asset embedding
rust-embed = { version = "8.0", features = ["debug-embed"] }

# Base64 encoding for secure tokens
base64 = "0.13"

# Async trait support
async-trait = "0.1"

# WebSocket utilities
futures-util = "0.3"

# Push notifications
web-push = "0.8"

# HTTP client for webhook delivery
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"

# Rate limiting and security
governor = "0.6"
tower-governor = "0.1"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"

[lib]
name = "campfire_on_rust"
path = "src/lib.rs"

[[bin]]
name = "campfire-on-rust"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
