[package]
name = "campfire-on-rust"
version = "0.1.0"
edition = "2021"
authors = ["Campfire Team"]
description = "Rust rewrite of Basecamp's Campfire chat application"
license = "MIT"

[dependencies]
# Web framework and async runtime
axum = { version = "0.6", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "cors", "trace", "limit", "timeout", "set-header"] }

# Database and migrations
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication and security
bcrypt = "0.13"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# HTML sanitization and rich text processing
ammonia = "3.0"
regex = "1.0"
html-escape = "0.2"

# Asset embedding
rust-embed = { version = "8.0", features = ["debug-embed"] }

# Base64 encoding for secure tokens
base64 = "0.13"

# Hex encoding for session tokens
hex = "0.4"

# Environment variable loading
dotenvy = "0.15"

# Async trait support
async-trait = "0.1"

# WebSocket utilities
futures-util = "0.3"

# Push notifications
web-push = "0.8"

# HTTP client for webhook delivery
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"

# Rate limiting and security
governor = "0.6"
tower_governor = "0.2"
validator = { version = "0.16", features = ["derive"] }

# Signal handling and graceful shutdown
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Performance monitoring and optimization
sysinfo = { version = "0.29", optional = true }
moka = { version = "0.12", features = ["future"] }
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
arc-swap = "1.6"

# Memory profiling and optimization
tikv-jemallocator = { version = "0.5", optional = true }

# CPU profiling
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"
hyper = { version = "0.14", features = ["full"] }
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["performance-monitoring"]
jemalloc = ["tikv-jemallocator"]
profiling = ["pprof"]
performance-monitoring = ["sysinfo"]

[[bench]]
name = "performance_benchmarks"
harness = false

[lib]
name = "campfire_on_rust"
path = "src/lib.rs"

[[bin]]
name = "campfire-on-rust"
path = "src/main.rs"

[profile.release]
# Link-time optimization for smaller binary
lto = true
# Single codegen unit for better optimization
codegen-units = 1
# Abort on panic for smaller binary
panic = "abort"
# Strip debug symbols for smaller binary
strip = true
# Optimize for size
opt-level = "s"

# Development profile optimizations
[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
overflow-checks = true

# Test profile
[profile.test]
opt-level = 1
debug = true
